--- a/views/email/leave_request_to_supervisor.hbs
+++ b/views/email/leave_request_to_supervisor.hbs
@@ -4,7 +4,7 @@ Hello {{#with approver }}{{this.full_name}}{{/with}},
 
 There is new leave request from {{#with requester}}{{this.full_name}}{{/with}}.
 
-Please visit http://timeoff.management/requests/ Approve or Reject outstanding requests.
+Please visit http://timeoff.management/requests/ to approve or reject outstanding requests.
 
 Thanks,
 Pavlo
